Add model where cube is offset from the origin
Not really broken, but not canonical.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ test.*
 #Except the ones in those folders that use OpenSCAD as their source.
 broken/cube_0.06.stl
 broken/non_manifold.stl
+broken/offset_from_0.stl
 broken/small_z_gap.stl
 broken/tiny_sphere.stl
 broken/separate_meshes.stl
